--- a/Twine/Japan.html
+++ b/Twine/Japan.html
@@ -17,7 +17,7 @@ How do you respond?
 
 [[Response 2]]: Bow a little, but not so much that you look like you are copying him and greet Tanaka saying &quot;good morning, I am pleased to meet you&quot; 
 
-[[Response 3]]: Bow to the same depth and say &quot;Greeting Takanasan, it is a pleasure to meet you. I am honored that you are here to pick me up.&quot;</tw-passagedata><tw-passagedata pid="2" name="Response 1" tags="Response-One" position="1000,250" size="100,100">After picking you up at the airport, Tanakasan brought you to the hotel to relax and freshen up before the meeting. You agreed to meet in the loby at 14:00 (2pm). It is currently 13:45. 
+[[Response 3]]: Bow to the same depth and say &quot;Greeting Takanasan, it is a pleasure to meet you. I am honored that you are here to pick me up.&quot;</tw-passagedata><tw-passagedata pid="2" name="Response 1" tags="Response-One" position="1000,250" size="100,100">After picking you up at the airport, Tanakasan brought you to the hotel to relax and freshen up before the meeting. You agreed to meet in the lobby at 14:00 (2pm). It is currently 13:45. 
 
 What do you do?
 
@@ -25,7 +25,7 @@ What do you do?
 
 [[Option 1.2]]: Head down now and relax in the hotel lobby. Perhaps you order a coffee and casually observe the surroundings, keeping an eye on the time. You plan to head to the meeting spot right at 14:00.
 
-[[Option 1.3]]: Watch some TV to kill time. You do not want to show up too early, </tw-passagedata><tw-passagedata pid="3" name="Response 3" tags="" position="1000,500" size="100,100">After picking you up at the airport, Tanakasan brought you to the hotel to relax and freshen up before the meeting. You agreed to meet in the loby at 14:00 (2pm). It is currently 13:45. 
+[[Option 1.3]]: Watch some TV to kill time. You do not want to show up too early, </tw-passagedata><tw-passagedata pid="3" name="Response 3" tags="" position="1000,500" size="100,100">After picking you up at the airport, Tanakasan brought you to the hotel to relax and freshen up before the meeting. You agreed to meet in the lobby at 14:00 (2pm). It is currently 13:45. 
 
 What do you do?
 
@@ -33,7 +33,7 @@ What do you do?
 
 [[Option 3.2]]: Head down now and relax in the hotel lobby. Perhaps you order a coffee and casually observe the surroundings, keeping an eye on the time. You plan to head to the meeting spot right at 14:00.
 
-[[Option 3.3]]: Watch some TV to kill time. You do not want to show up too early, </tw-passagedata><tw-passagedata pid="4" name="Option 1.1" tags="" position="1200,75" size="100,100">Although confused by the handshake, Tanaka would understand that cultural differences might have caused this awkward interaction.  Showing up punctually and prepared for the meeting shows great respect. This would set the stage for a positive working relationship.</tw-passagedata><tw-passagedata pid="5" name="Response 2" tags="" position="1000,375" size="100,100">After picking you up at the airport, Tanakasan brought you to the hotel to relax and freshen up before the meeting. You agreed to meet in the loby at 14:00 (2pm). It is currently 13:45. 
+[[Option 3.3]]: Watch some TV to kill time. You do not want to show up too early, </tw-passagedata><tw-passagedata pid="4" name="Option 1.1" tags="" position="1200,75" size="100,100">Although confused by the handshake, Tanaka would understand that cultural differences might have caused this awkward interaction.  Showing up punctually and prepared for the meeting shows great respect. This would set the stage for a positive working relationship.</tw-passagedata><tw-passagedata pid="5" name="Response 2" tags="" position="1000,375" size="100,100">After picking you up at the airport, Tanakasan brought you to the hotel to relax and freshen up before the meeting. You agreed to meet in the lobby at 14:00 (2pm). It is currently 13:45. 
 
 What do you do?
 
